# RLServer

./: .env  .env.example  .gitignore  API_DOCS.md  API文档.md  Cargo.toml  Dockerfile  INSOMNIA_TEST_GUIDE.md  README.md  TEST_CASES.md  admin_table_schema.txt  admin_users_data.sql  create_admin.rs  db_schema.sql  docker-compose.yml  generate_bcrypt_hash.rs  generate_card_codes.py  generate_card_codes.sql  generate_ssl_cert.ps1  generate_ssl_cert.sh  nginx.conf  playwright_test.py  reset_admin_password.rs  simple_test.ps1  test_api.ps1  test_heartbeat_logout.ps1  test_login.sh  test_recharge.ps1  test_registration_login.ps1  test_simple.ps1  update_admin_password.rs  开发环境.md
.trae/documents/: RLServer功能完善计划.md  RLServer项目改进计划.md  Rust+PostgreSQL用户验证和充值服务开发计划.md  plan_20260101_112929.md  后台管理系统设计与实现.md  实现HTTPS开关和Let's Encrypt证书配置.md  部署流程.md
RLServerClient/: App.config  Form1.Designer.cs  Form1.cs  Program.cs  RLServerClient.csproj  RLServerClient.sln
RLServerClient/Models/: Card.cs  RechargeRecord.cs  Software.cs  User.cs
RLServerClient/Services/: ApiClient.cs  HardwareIdGenerator.cs  IpAddressManager.cs  ProcessManager.cs
RLServerClient/Utils/: ConfigManager.cs  DownloadManager.cs
migrations/: 20251222220000_create_users.sql
migrations/000001_complete_schema/: down.sql  up.sql
migrations/000001_initial_schema/: down.sql  up.sql
migrations/000002_add_token_to_verification_codes/: down.sql  up.sql
migrations/000003_add_software_details/: down.sql  up.sql
migrations/000004_add_blacklist_table/: down.sql  up.sql
migrations/000005_add_admin_tables/: down.sql  up.sql
migrations/20251223000000_add_email_fields/: down.sql  up.sql
migrations/20251223000001_create_verification_codes/: down.sql  up.sql
migrations/20251227000000_add_last_logout_at/: down.sql  up.sql
playwright_tests/: debugtest_9c645c3b-e478-44ab-9278-862b54580cc7.spec.ts  debugtest_af663c95-d230-44f5-8afb-7f0014d6c402.spec.ts
src/: config.rs  errors.rs  main.rs  routes.rs  schema.rs
src/admin/: mod.rs  routes.rs
src/admin/handlers/: auth.rs  card.rs  mod.rs  software.rs  stats.rs  user.rs
src/admin/middleware/: auth.rs  mod.rs
src/admin/services/: admin_user.rs  card.rs  mod.rs  software.rs  stats.rs  user.rs
src/background/: mod.rs
src/database/: connection.rs  mod.rs  models.rs  verification_code.rs
src/handlers/: auth.rs  email.rs  heartbeat.rs  mod.rs  recharge.rs  software.rs  user.rs
src/middleware/: auth.rs  error.rs  logger.rs
src/services/: auth.rs  email.rs  heartbeat.rs  recharge.rs  software.rs  user.rs
src/utils/: crypto.rs  email.rs  ip.rs  jwt.rs  logger.rs  mod.rs  time.rs
static/css/: admin.css
static/js/: admin.js
templates/: base.html
templates/admin/: change_password.html  dashboard.html  login.html  logs.html  profile.html  register.html
templates/admin/card/: detail.html  generate.html  generate_result.html  generate_simple.html  history.html  list.html  simple_test.html  test.html
templates/admin/software/: add.html  detail.html  edit.html  list.html
templates/admin/stats/: cards.html  overview.html  sales.html  users.html
templates/admin/user/: add.html  blacklist.html  blacklist_add.html  detail.html  edit.html  list.html  login_history.html  online_users.html
