[package]
name = "rlserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web框架
actix-web = "4.5.1"
actix-rt = "2.10.0"
actix-cors = "0.7.1"

# 数据库
diesel = { version = "2.2.1", features = ["sqlite", "postgres", "chrono", "r2d2"] }
diesel_migrations = "2.2.0"
r2d2 = "0.8.10"

# 异步支持
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.77"

# JWT认证
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }

# 密码加密
bcrypt = "0.15.0"

# 环境变量
dotenv = "0.15.0"

# 正则表达式
regex = "1.10.5"

# 随机数生成
rand = "0.8.5"

# SMTP客户端
lettre = "0.11.19"
native-tls = "0.2.14"

# 日志
log = "0.4.21"
fern = { version = "0.6.2", features = ["colored"] }

# 序列化/反序列化
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# 配置管理
config = { version = "0.14.0", features = ["toml"] }

# 工具库
anyhow = "1.0.86"
thiserror = "1.0.61"
humantime = "2.1.0"

# API速率限制
actix-governor = "0.5.0"
governor = { version = "0.5.1", features = ["std"] }

# 输入验证
validator = { version = "0.16.0", features = ["derive"] }

# 时间处理
time = "0.3.36"

[dev-dependencies]
# actix-web-test = "4.2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
